--- a/src/pages/testing/testCreation/completeTest/defectDetails/defectDetails.scss
+++ b/src/pages/testing/testCreation/completeTest/defectDetails/defectDetails.scss
@@ -22,6 +22,17 @@ ion-app.ios page-defectDetails {
             }
         }
 
+        .item.attachments {
+            ion-label {
+                img {
+                    height: 75px;
+                    width: 75px;
+                    margin-right: 10px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
         .item.defect-description {
             .item-inner {
                 align-items: start;
