--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,7 +29,7 @@
       padding: 0;
       height: 44px;
       margin-left: 10px;
-      margin-top: 35px;
+      margin-top: 55px;
 
       .toolbar-title-ios {
         text-align: left;
@@ -70,6 +70,7 @@
     }
   }
 }
+
 
 .item-ios {
   padding-left: 0;
@@ -116,5 +117,28 @@
     min-height: 44px;
     height: inherit;
     padding-bottom: inherit;
+  }
+}
+
+// Global CSS for item-dividers
+ion-item-divider {
+  .label-ios {
+    margin: 0 8px 0 0;
+  }
+  span {
+    font-size: $item-ios-divider-font-size;
+  }
+}
+
+// Global CSS for item-groups
+ion-item-group {
+  .item-ios {
+    padding-left: 16px;
+  }
+
+  .item-ios:last-child {
+    .item-inner {
+      border-bottom: none !important;
+    }
   }
 }
