--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -1,14 +1,6 @@
 ion-app.ios page-complete-test {
-  [padding] .scroll-content {
-    padding: 0;
-  }
-
-  .scroll-content {
+ .scroll-content {
     max-height: calc(100% - 215px);
-  }
-
-  ion-list-header {
-    font-size: 1.3rem;
   }
 
   .item-block {
@@ -118,6 +110,36 @@ ion-app.ios page-complete-test {
     }
 
   }
+
+  .badge-ios-light {
+    border: 1px solid color($colors, dark);
+    background-color: transparent;
+  }
+
+  .btn-add-test {
+    font-size: 16px;
+    color: color($colors, primary);
+  }
+
+  .parent-info-color {
+    color: $light-gray;
+  }
+
+  .truncate-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .no-margin-left {
+    margin-left: 0;
+  }
+
+  .no-margin-right {
+    margin-right: 0;
+  }
+
+
 
 }
 
