--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,8 +21,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-
-
+$item-ios-divider-font-size: 14px;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -33,12 +32,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #005ea5,
-  secondary:  #00823b,
-  danger:     #b10e1e,
-  attention:  #F47738,
-  light:      #f4f4f4,
-  dark:       #0b0c0c
+  primary:     #005ea5,
+  secondary:   #00823b,
+  button-blue: #3f9ed5,
+  danger:      #b10e1e,
+  attention:   #ffbf47,
+  light:       #f4f4f4,
+  dark:        #0b0c0c
 );
 
 $light-gray: #d3d3d3;
