--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -115,4 +115,17 @@
     height: inherit;
     padding-bottom: inherit;
   }
+
+  // Mobile Accessibility - start
+  .invert-colors {
+    filter: invert(100%);
+  }
+
+  .bold-text-activated {
+    font-weight: 600 !important;
+    span, p, h1, h2, h3, h4, h5 {
+      font-weight: 600 !important;
+    }
+  }
+  // Mobile Accessibility - end
 }
