CVSB-139 - implement add-defect and unit tests

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -69,6 +69,7 @@
   }
 }
 
+
 .item-ios {
   padding-left: 0;
 
@@ -120,6 +121,29 @@
     font-weight: 600 !important;
     span, p, h1, h2, h3, h4, h5 {
       font-weight: 600 !important;
+    }
+  }
+}
+
+// Global CSS for item-dividers
+ion-item-divider {
+  .label-ios {
+    margin: 0 8px 0 0;
+  }
+  span {
+    font-size: $item-ios-divider-font-size;
+  }
+}
+
+// Global CSS for item-groups
+ion-item-group {
+  .item-ios {
+    padding-left: 16px;
+  }
+
+  .item-ios:last-child {
+    .item-inner {
+      border-bottom: none !important;
     }
   }
 }
