--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,7 @@ $app-direction: ltr;
 
 $title-font-family: "Arial Black", Gadget, sans-serif;
 $item-ios-divider-font-size: 14px;
+$custom-back-button-font-size: 34px;
 
 // Named Color Variables
 // --------------------------------------------------
