--- a/src/pages/testing/defects/add-defect/add-defect.scss
+++ b/src/pages/testing/defects/add-defect/add-defect.scss
@@ -68,5 +68,9 @@ ion-app.ios page-add-defect {
       color: inherit !important;
     }
   }
+
+  .badge__text-black {
+    color: #000000;
+  }
 }
 
