--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,7 @@
 // automatically applied to the <body> element in the app.
 
 .header-ios {
+ 
   ion-navbar.toolbar {
     display: flex;
     align-items: flex-start;
@@ -22,7 +23,9 @@
 
   ion-navbar {
     min-height: 80px;
-
+    height: inherit;
+    background: color($colors, dark);
+    
     ion-title {
       padding: 0;
       height: 44px;
@@ -30,23 +33,30 @@
 
       .toolbar-title-ios {
         text-align: left;
-        font-size: 28px;
-        color: #fff;
+        font-size: $font-size-large;
+        font-weight: $font-weight-bold;
+        line-height: 41px;
+        color: color($colors, light);
       }
     }
 
     .toolbar-background-ios {
-      background-color: #000;
+      background-color: color($colors, dark);
     }
 
     button {
-      color: #fff;
+      color: color($colors, light);
+      font-weight: $font-weight-bold;
+
+      &.back-button{
+        font-weight: $font-weight-normal;
+      }
     }
   }
 
   ion-navbar.testInProgress {
     .toolbar-background-ios {
-      background-color: #005ea5;
+      background-color: color($colors, primary);
     }
   }
 
@@ -55,7 +65,7 @@
     min-height: 50px;
 
     .toolbar-background-ios {
-      background-color: #000;
+      background-color: color($colors, dark);
     }
 
     .searchbar-ios {
@@ -67,7 +77,7 @@
       }
 
       .searchbar-input {
-        background-color: #d3d3d3;
+        background-color: $light-gray;
       }
     }
   }
@@ -77,7 +87,7 @@
   padding-left: 0;
 
   .ion-item-header {
-    font-weight: bold;
+    font-weight: $font-weight-bold;
   }
 }
 
@@ -107,7 +117,7 @@
     padding: 0 16px;
     button {
       margin-bottom: 30px;
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
@@ -141,6 +151,10 @@ ion-item-divider {
 
 // Global CSS for item-groups
 ion-item-group {
+  .item-ios {
+    padding: 0 16px;
+  }
+
   .item-ios:last-child {
     .item-inner {
       border-bottom: none !important;
@@ -175,3 +189,95 @@ ion-item-group {
 .searchbar-ionToolBar {
   padding-top: 24px !important;
 }
+// Registration plate
+.vehicle-header-vrm-number {
+  background: $reg-plate-color;
+  width: 194px;
+  height: 50px;
+  font-size: $font-size-large;
+  font-weight: $font-weight-bold;
+  line-height: 42px;
+  border-radius: 8px;
+  border: 3px color($colors, dark) solid;
+  margin: 24px auto;
+}
+
+// Vehicle list general style
+ion-list.vehicle-list{
+  border-bottom: 0.5px solid $list-ios-border-color;
+  margin-bottom: 10px;
+  background: #fff; 
+
+  ion-list-header.list-header{
+    height: $list-header-height-small;
+    background: $list-ios-header-background-color;
+    border-bottom: 0.5px solid $list-ios-border-color;
+
+    ion-label{
+      font-size: $font-size-small;
+      font-weight: $font-weight-normal;
+      margin-bottom: 0;
+    }
+  }
+
+  .item-block .item-inner {
+    border-bottom: none;
+    padding-right: 0;
+  }
+
+  ion-item.item-ios{
+    width: calc(100% - 16px);
+    border-bottom: 0.5px solid $list-ios-border-color;
+
+    &:last-child{
+      border-bottom: 0;
+      margin-bottom: 1px; /* Fixes overlapping issue with the list's border-bottom */
+    }
+
+    ion-label{
+      color: $list-ios-header-font-color;
+      font-weight: $font-weight-normal;
+      line-height: 18px;
+
+      h3{
+        font-size: $font-size-medium;
+        font-weight: $font-weight-normal;
+        line-height: 22px;
+        color: color($colors, dark);
+      }
+
+      p[text-wrap]{
+        font-size: $font-size-medium;
+        font-weight: $font-weight-normal;
+        line-height: 22px;
+        color: color($colors, dark);
+      }
+    }
+  
+    [item-content]{
+      p{
+        font-size: $font-size-medium;
+        font-weight: $font-weight-normal;
+        line-height: 22px;
+        color: $list-ios-item-font-color;
+      }
+    }
+  }
+  button.item-ios {
+    height: 60px;
+    width: calc(100% - 16px);
+    border-bottom: 0.5px solid $list-ios-border-color;
+
+    &:last-child{
+      border-bottom: 0;
+      margin-bottom: 1px; /* Fixes overlapping issue with the list's border-bottom */
+    }
+
+    ion-label{
+      h3{
+        font-size: $font-size-medium;
+      }
+    }
+  } 
+}
+
