--- a/src/pages/visit/visit-timeline/visit-timeline.scss
+++ b/src/pages/visit/visit-timeline/visit-timeline.scss
@@ -62,11 +62,11 @@ ion-app.ios page-visit-timeline {
 
       ion-item.timeline-checkin {
         .icon-ios {
-          color: $light-gray;
+          color: $item-icon-light-gray;
         }
 
         .timeline-bar {
-          border-left-color: $light-gray;
+          border-left-color: $item-icon-light-gray;
         }
       }
 
