--- a/src/pages/atf/atf-search/atf-search.scss
+++ b/src/pages/atf/atf-search/atf-search.scss
@@ -1,4 +1,12 @@
 page-atf-search {
+  .item-ios.list-item-height {
+    min-height: $list-ios-item-height;
+
+    h3 {
+      font-size: 17px;
+    }
+  }
+
   strong {
     font-weight: normal;
     color: black;
