--- a/src/pages/testing/defects/add-defect-category/add-defect-category.scss
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.scss
@@ -1,12 +1,12 @@
-ion-app.ios page-add-defect-category {
+page-add-defect-category {
   .item-ios {
     ion-icon[item-end] {
       color: #c8c7cc;
     }
   }
 
-  .item-ios.defect-category {
-    min-height: 71px;
+  .item-ios.list-item-height {
+    min-height: $list-ios-item-height;
 
     h3 {
       font-size: 17px;
