--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -122,7 +122,7 @@ ion-app.ios page-complete-test {
   }
 
   .parent-info-color {
-    color: $light-gray;
+    color: $item-icon-light-gray;
   }
 
   .truncate-text {
