--- a/src/pages/testing/test-creation/test-types-list/test-types-list.scss
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.scss
@@ -1,4 +1,4 @@
-page-add-defect-item {
+page-tests-types-list {
   .item-ios {
     ion-icon[item-end] {
       color: $item-icon-light-gray;
@@ -13,6 +13,3 @@ page-add-defect-item {
     }
   }
 }
-
-
-
