--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,8 +22,11 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $title-font-family: "Arial Black", Gadget, sans-serif;
-$item-ios-divider-font-size: 14px;
 $custom-back-button-font-size: 34px;
+
+$item-icon-light-gray: #BCBBC1;
+$content-background-color: #DEE0E2;
+$list-ios-item-height: 71px;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -39,12 +42,9 @@ $colors: (
   button-blue: #3f9ed5,
   danger:      #b10e1e,
   attention:   #ffbf47,
-  light:       #f4f4f4,
+  light:       #fff,
   dark:        #0b0c0c
 );
-
-$light-gray: #d3d3d3;
-$content-background-color: #dee0e2;
 
 // App iOS Variables
 // --------------------------------------------------
@@ -54,7 +54,7 @@ $list-ios-header-background-color: #F5F5F5;
 $list-ios-border-color: #c8c7cc;
 $item-ios-detail-push-color: $list-ios-border-color;
 $card-ios-border-radius: 5px;
-
+$item-ios-divider-background: $content-background-color;
 
 // App Material Design Variables
 // --------------------------------------------------
