--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -48,7 +48,7 @@ page-test-create {
         }
 
         [item-end].test-type-status {
-          margin: 8px;
+          margin: 0;
         }
 
         [item-end].odometer-reading-status {
