--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -1,42 +1,63 @@
 ion-app.ios page-complete-test {
- .scroll-content {
-    max-height: calc(100% - 215px);
-  }
 
   .item-block {
     min-height: 58px;
+  }
 
-    ion-input {
-      ::-webkit-input-placeholder {
-        text-align: right;
-      }
-      input:-moz-placeholder {
-        text-align: right;
-      }
+  .bottom-divider {
+    border-top: 0.55px solid $item-icon-light-gray;
+  }
 
-      input {
-        text-align: right;
-      }
-    }
+  button[disabled] {
+    opacity: unset;
+  }
 
-    ion-input.odometer-reading {
-      ::-webkit-input-placeholder {
-        color: color($colors, attention);
-      }
-      input:-moz-placeholder {
-        color: color($colors, attention);
-      }
-    }
+  h3[item-end].current-value {
+    margin-bottom: 8px;
+  }
 
-    .button-ios {
-      color: #8e9093;
-      background-color: #fff;
-      font-size: 17px;
-    }
+  ion-icon[item-end].arrow-forward {
+    display: flex;
+    align-items: center;
+    font-size: 22px;
+    color: $item-icon-light-gray;
+  }
 
-    ion-select {
-      color: #8e9093;
-    }
+  .datetime-ios {
+    padding: unset;
+    font-size: $item-ios-divider-font-size;
+  }
+
+  ion-grid.certificateNumberCustom {
+    padding: unset;
+    background-color: color($colors, light);
+  }
+
+  ion-col[col-2].certificateNumberCustom-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 1px solid $list-ios-border-color;
+  }
+
+  ion-col[col-10].certificateNumberCustom-input {
+    padding-left: 16px;
+  }
+
+  h3[item-end].current-value.no-data {
+    color: $light-gray;
+  }
+
+  h3[item-end].current-value.data-successful {
+    font-size: $font-size-medium;
+    font-weight: $font-weight-bold;
+    color: color($colors, secondary);
+  }
+
+  h3[item-end].current-value.data-unsuccessful {
+    font-size: $font-size-medium;
+    font-weight: $font-weight-bold;
+    color: color($colors, danger);
   }
 
   .defect-details {
@@ -58,57 +79,6 @@ ion-app.ios page-complete-test {
     margin-left: 14px;
     margin-right: 0px;
     color: color($colors, secondary);
-  }
-
-  ion-footer {
-    padding: 0px 16px 25px 16px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: #fff;
-    position: fixed;
-    height: 135px;
-
-    -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-
-    .list-ios {
-      margin-bottom: 0px;
-
-      .item-block .item-inner {
-        border: none;
-      }
-    }
-
-    h2 {
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    h2:first-child {
-      margin: auto;
-    }
-
-    h1 {
-      font-size: 30px;
-      font-weight: bold;
-    }
-
-    h1.test-type-pass {
-      color: color($colors, secondary);
-    }
-
-    h1.test-type-fail {
-      color: color($colors, danger);
-    }
-
-    button {
-      background-color: color($colors, secondary);
-      -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
-    }
-
   }
 
   .badge-ios-light {
@@ -138,8 +108,5 @@ ion-app.ios page-complete-test {
   .no-margin-right {
     margin-right: 0;
   }
-
-
-
 }
 
