--- a/src/pages/visit/visit-timeline/visit-timeline.scss
+++ b/src/pages/visit/visit-timeline/visit-timeline.scss
@@ -2,7 +2,7 @@ ion-app.ios page-visit-timeline {
 
   ion-content {
     .list-ios {
-      ion-item {
+      button {
         border-bottom: 0.55px solid #c8c7cc;
 
         .icon-ios {
@@ -14,12 +14,14 @@ ion-app.ios page-visit-timeline {
         }
 
         img {
-          margin-left: 12px;
+          position: relative;
+          top: 10px;
+          margin-left: 15.4px;
           margin-right: 0;
           z-index: 1;
           background-color: #fff;
-          width: 33px;
-          height: 33px;
+          width: 25.5px;
+          height: 27px;
         }
 
         .timeline-bar {
@@ -34,21 +36,28 @@ ion-app.ios page-visit-timeline {
           margin: 15px 0;
 
           h2 {
-            font-size: 2.0rem;
+            font-size: $font-size-medium;
             font-weight: 500;
           }
 
           p {
-            font-size: 1.5rem;
+            font-size: $font-size-normal;
           }
 
           span {
             .pass {
               color: color($colors, secondary);
+              font-weight: $font-weight-semi-bold;
             }
 
             .fail {
               color: color($colors, danger);
+              font-weight: $font-weight-semi-bold;
+            }
+
+            .prs {
+              color: color($colors, primary);
+              font-weight: $font-weight-semi-bold;
             }
           }
         }
@@ -60,19 +69,35 @@ ion-app.ios page-visit-timeline {
         }
       }
 
-      ion-item.timeline-checkin {
+      button.timeline-checkin.item-block {
+        align-items: start;
+      }
+
+      button.timeline-checkin {
         .icon-ios {
           color: $item-icon-light-gray;
         }
 
         .timeline-bar {
-          border-left-color: $item-icon-light-gray;
+          border-left-color: color($colors, primary);
+          top: 40%;
         }
       }
 
-      ion-item.timeline-test {
+      button.timeline-test.item-block {
+        align-items: start;
+      }
+
+      button.timeline-test {
         .icon-ios {
           color: color($colors, primary);
+        }
+
+
+        img {
+          height: 20px;
+          width: 20px;
+          margin-left: 18px;
         }
 
         .timeline-bar {
@@ -84,5 +109,14 @@ ion-app.ios page-visit-timeline {
         border-bottom: none;
       }
     }
+  }
+
+  .button-centered {
+    width: 25%;
+    margin: auto;
+  }
+
+  .divider-color {
+    color: $list-ios-header-font-color;
   }
 }
