--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,6 +28,7 @@ $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 
 $font-size-small: 13px;
+$font-size-normal: 15px;
 $font-size-medium: 17px;
 $font-size-large: 34px;
 
