--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,7 +33,7 @@
 
       .toolbar-title-ios {
         text-align: left;
-        font-size: $font-size-large;
+        font-size: $font-size-extra-large;
         font-weight: $font-weight-bold;
         line-height: 41px;
         color: color($colors, light);
@@ -197,7 +197,7 @@ ion-item-group {
   background: $color-reg-plate;
   width: 194px;
   height: 50px;
-  font-size: $font-size-large;
+  font-size: $font-size-extra-large;
   font-weight: $font-weight-bold;
   line-height: 42px;
   border-radius: 8px;
