--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -83,7 +83,7 @@ page-test-create {
         }
 
         [item-end].odometer-reading-icon.odometer-reading-icon-data {
-          font-size: $font-size-large;
+          font-size: $font-size-extra-large;
           color: color($colors, primary);
         }
       }
