--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,8 @@ $font-weight-bold: 700;
 $font-size-small: 13px;
 $font-size-normal: 15px;
 $font-size-medium: 17px;
-$font-size-large: 34px;
+$font-size-large: 28px;
+$font-size-extra-large: 34px;
 
 $item-ios-divider-font-size: 14px;
 $custom-back-button-font-size: 34px;
