--- a/src/pages/atf/atf-home/atf-home.scss
+++ b/src/pages/atf/atf-home/atf-home.scss
@@ -6,7 +6,7 @@ page-atf-home {
 
   .blue-bar {
     height: 15px;
-    background-color: color($colors, primary);
+    background-color: color($colors, tertiary);
   }
 
   .start-title {
