--- a/src/pages/atf/atf-details/atf-details.scss
+++ b/src/pages/atf/atf-details/atf-details.scss
@@ -8,17 +8,17 @@ ion-app.ios page-atf-details {
   }
 
   .value-custom-style {
-    color: $list-ios-item-font-color;
+    color: $color-grey-1;
   }
 
   .number-custom-style {
     font-size: $item-ios-divider-font-size;
-    color: color($colors, button-blue);
-    border-bottom: 0.55px solid $item-icon-light-gray;
+    color: color($colors, primary);
+    border-bottom: 0.55px solid $color-grey-2;
   }
 
   ion-item-divider {
-    border-bottom: 0.55px solid $item-icon-light-gray;
+    border-bottom: 0.55px solid $color-grey-2;
   }
 
 }
