--- a/src/pages/testing/test-creation/odometer-reading/odometer-reading.scss
+++ b/src/pages/testing/test-creation/odometer-reading/odometer-reading.scss
@@ -13,7 +13,7 @@ page-odometer-reading {
 
     [item-end].unit-edit {
       margin: 0;
-      color: $item-icon-light-gray;
+      color: $color-grey-1;
     }
 
   }
