--- a/src/pages/testing/test-creation/test-summary/test-summary.scss
+++ b/src/pages/testing/test-creation/test-summary/test-summary.scss
@@ -1,7 +1,7 @@
 ion-app.ios page-test-summary {
   [padding] .scroll-content {
     padding: 0;
-    background-color: #dee0e2;
+    background-color: $color-grey-3;
   }
 
   ion-item.summary-message {
@@ -21,7 +21,7 @@ ion-app.ios page-test-summary {
     }
 
     .list-ios > .item-block:first-child {
-      border-bottom: 1px solid #dee0e2;
+      border-bottom: 1px solid $color-grey-3;
     }
 
     ion-list {
@@ -35,7 +35,7 @@ ion-app.ios page-test-summary {
         }
 
         p.vehicle-registration {
-          color: #8c8c8c;
+          color: $color-grey-1;
           font-size: 12px;
         }
 
@@ -72,6 +72,6 @@ ion-app.ios page-test-summary {
   }
 
   ion-footer {
-    background-color: #dee0e2;
+    background-color: $color-grey-3;
   }
 }
