--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
@@ -6,7 +6,7 @@ ion-app.ios page-vehicle-brakes {
 
   ion-content {
     .scroll-content{
-      background: $content-background-color;
+      background: $color-grey-3;
     }
 
     ion-list.vehicle-list{
