--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.scss
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.scss
@@ -7,7 +7,7 @@ ion-app.ios page-vehicle-details {
   ion-content {
     
     .scroll-content{
-      background: $content-background-color;
+      background: $color-grey-3;
     }
 
     .vehicle-header-vrm-number {
