--- a/src/pages/testing/vehicle/vehicle-history/vehicle-history.scss
+++ b/src/pages/testing/vehicle/vehicle-history/vehicle-history.scss
@@ -5,7 +5,7 @@ page-vehicle-history {
 
   ion-content {
     .scroll-content {
-      background: $content-background-color;
+      background: $color-grey-3;
     }
   }
 
